correct alignment of gallery block

--- a/assets/sass/_media.scss
+++ b/assets/sass/_media.scss
@@ -143,7 +143,10 @@ img.wp-post-image {
 			padding: 0.5rem;
 		}
 	}
-	margin: 0 auto;
+}
+
+.entry-content .wp-block-gallery {
+	margin: inherit auto;
 }
 
 .entry-attachment img {
